# afids-auto-harness

./: README.md  pyproject.toml
afids_auto_harness/config/: config.yaml
afids_auto_harness/workflow/: Snakefile
afids_auto_harness/workflow/scripts/: calc_afle.py  split_data.py  summarize_afles.py
config/: config.yaml
workflow/: Snakefile
workflow/scripts/: calc_afle.py  split_data.py
